# ademma

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
core_include/: arbitrary_calculation_input.hpp  c_motivic_adem_math.hpp  c_motivic_adem_monomial.hpp  c_motivic_adem_polynomial.hpp  classical_adem_math.hpp  classical_adem_monomial.hpp  classical_adem_polynomial.hpp  cmake_template_version_info.hpp.in  debug_output.hpp  general_adem_math.hpp  math.hpp  parsing_info.hpp  r_motivic_adem_math.hpp  r_motivic_adem_monomial.hpp  r_motivic_adem_polynomial.hpp  setting.hpp  steenrod_square.hpp
core_src/: arbitrary_calculation_input.cpp  c_motivic_adem_math.cpp  c_motivic_adem_monomial.cpp  c_motivic_adem_polynomial.cpp  classical_adem_math.cpp  classical_adem_monomial.cpp  classical_adem_polynomial.cpp  general_adem_math.cpp  math.cpp  parsing_info.cpp  r_motivic_adem_math.cpp  r_motivic_adem_monomial.cpp  r_motivic_adem_polynomial.cpp  setting.cpp  steenrod_square.cpp
latex_integration/: README.md  ademma.sty
test_include/: test_aci_input.hpp  test_cl_prod_binary_degrees_1_to_n.hpp  test_rm_two_factor.hpp  test_sq1_sq2n.hpp  test_sq2nminus1_sqn.hpp  test_sq2tothen_tothe2nplus2.hpp  testing_helper_functions.hpp
test_src/: main.cpp  test_aci_input.cpp  test_cl_prod_binary_degrees_1_to_n.cpp  test_rm_two_factor.cpp  test_sq1_sq2n.cpp  test_sq2nminus1_sqn.cpp  test_sq2tothen_tothe2nplus2.cpp  testing_helper_functions.cpp
tui_src/: main.cpp  test_aci.cpp
